k8s/rocketchat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-service
  namespace: default
  labels:
    app: rocketchat
    component: chat
  annotations: {}
spec:
  type: ClusterIP
  selector:
    app: rocketchat
    component: chat
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  sessionAffinity: None
